// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TextField Defaults play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rd:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rc:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:rc:"
             class="_textbox_jd6ca_12"
             value
      >
    </div>
    <div id="textFieldErrorId-:rb:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAs play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rj:"
           class="_label_348na_5"
           for="textFieldTextboxId-:ri:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <textarea id="textFieldTextboxId-:ri:"
                class="_textbox_jd6ca_12  _textbox_multiline_jd6ca_52"
      >
      </textarea>
    </div>
    <div id="textFieldErrorId-:rh:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname"
       lang="nb"
  >
    <label id="labelId-:r5:"
           class="_label_348na_5"
           for="htmlid"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="htmlid"
             class="_textbox_jd6ca_12"
             data-testid="123ID"
             form="formid123"
             value
      >
    </div>
    <div id="textFieldErrorId-:r3:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAutoCompleteInputModeNameAndPlaceholder play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r15:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r14:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:r14:"
             class="_textbox_jd6ca_12"
             autocomplete="given-name"
             inputmode="text"
             name="test_name"
             placeholder="Kari Nordmann"
             value
      >
    </div>
    <div id="textFieldErrorId-:r13:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithControlledValueAndAutoSizeTextArea play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r37:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r36:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <textarea id="textFieldTextboxId-:r36:"
                class="_textbox_jd6ca_12  _textbox_multiline_jd6ca_52 _textbox_autosize_jd6ca_56"
                style="height: 88px;"
      >
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </textarea>
    </div>
    <div id="textFieldErrorId-:r35:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Nullstill
    </span>
  </button>
</div>
`;

exports[`Tester/TextField WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname">
    <label id="labelId-:r8:"
           class="_label_348na_5    dummyClassname"
           for="textFieldTextboxId-:r7:"
    >
      Navn
    </label>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="labelId-:r8:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r9:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r9:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_description_10ldw_17   dummyClassname">
      beskrivelse
    </div>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:r7:"
             class="_textbox_jd6ca_12    dummyClassname"
             aria-describedby="textFieldErrorId-:r6:"
             aria-invalid="true"
             value
      >
    </div>
    <div id="textFieldErrorId-:r6:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_1c261_13 dummyClassname">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _errorMessageIcon_1c261_24"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="_errorMessageText_1c261_29">
          Navn er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDataList play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r33:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r32:"
    >
      nettlesere
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:r32:"
             class="_textbox_jd6ca_12"
             list="browsers"
             value
      >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _dataListArrow_jd6ca_98"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
    </div>
    <div id="textFieldErrorId-:r31:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
  <datalist id="browsers">
    <option value="Edge">
    </option>
    <option value="Firefox">
    </option>
    <option value="Chrome">
    </option>
    <option value="Opera">
    </option>
    <option value="Safari">
    </option>
  </datalist>
</div>
`;

exports[`Tester/TextField WithDefaultValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rs:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rr:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:rr:"
             class="_textbox_jd6ca_12"
             value="Kari Nordmann"
      >
    </div>
    <div id="textFieldErrorId-:rq:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDefaultValueAndAutoSizeTextArea play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r12:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r11:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <textarea id="textFieldTextboxId-:r11:"
                class="_textbox_jd6ca_12  _textbox_multiline_jd6ca_52 _textbox_autosize_jd6ca_56"
                style="height: 88px;"
      >
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </textarea>
    </div>
    <div id="textFieldErrorId-:r10:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDefaultValueAndThousandSeparator play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rv:"
           class="_label_348na_5"
           for="textFieldTextboxId-:ru:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:ru:"
             class="_textbox_jd6ca_12"
             value="10 000"
      >
    </div>
    <div id="textFieldErrorId-:rt:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDescription play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r21:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r20:"
    >
      Navn
    </label>
    <div class="_description_10ldw_17">
      En liten beskrivelse tekst
    </div>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:r20:"
             class="_textbox_jd6ca_12"
             value
      >
    </div>
    <div id="textFieldErrorId-:r1v:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDisabled play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rm:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rl:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:rl:"
             class="_textbox_jd6ca_12"
             disabled
             value="Kari Nordmann"
      >
    </div>
    <div id="textFieldErrorId-:rk:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithErrorMessage play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1t:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1s:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:r1s:"
             class="_textbox_jd6ca_12"
             aria-describedby="textFieldErrorId-:r1r:"
             aria-invalid="true"
             value
      >
    </div>
    <div id="textFieldErrorId-:r1r:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_1c261_13 ">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _errorMessageIcon_1c261_24"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="_errorMessageText_1c261_29">
          Navn er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2n:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r2m:"
    >
      TextField har blitt blurret
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:r2m:"
             class="_textbox_jd6ca_12"
             value
      >
    </div>
    <div id="textFieldErrorId-:r2l:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHelpText play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2d:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r2c:"
    >
      Navn
    </label>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="labelId-:r2d:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2e:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2e:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:r2c:"
             class="_textbox_jd6ca_12"
             value
      >
    </div>
    <div id="textFieldErrorId-:r2b:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHelpTextAndDescription smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2i:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r2h:"
    >
      Navn
    </label>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="labelId-:r2i:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2j:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2j:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_description_10ldw_17">
      En liten beskrivelse tekst
    </div>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:r2h:"
             class="_textbox_jd6ca_12"
             value
      >
    </div>
    <div id="textFieldErrorId-:r2g:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2q:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r2p:"
    >
      Navn
    </label>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="labelId-:r2q:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2r:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2r:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:r2p:"
             class="_textbox_jd6ca_12"
             value
      >
    </div>
    <div id="textFieldErrorId-:r2o:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHideLabel play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r24:"
           class="_label_348na_5  _srOnly_348na_18"
           for="textFieldTextboxId-:r23:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:r23:"
             class="_textbox_jd6ca_12"
             value
      >
    </div>
    <div id="textFieldErrorId-:r22:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithMinAndMaxLength play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1h:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1g:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:r1g:"
             class="_textbox_jd6ca_12"
             maxlength="50"
             minlength="10"
             value
      >
    </div>
    <div id="textFieldErrorId-:r1f:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithPattern play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1k:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1j:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:r1j:"
             class="_textbox_jd6ca_12"
             pattern="[a-z]"
             value
      >
    </div>
    <div id="textFieldErrorId-:r1i:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithReadOnly play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r18:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r17:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:r17:"
             class="_textbox_jd6ca_12"
             readonly
             value="Kari Nordmann"
      >
    </div>
    <div id="textFieldErrorId-:r16:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRef play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:r1:"
             class="_textbox_jd6ca_12"
             value
             name="dummyNameForwardedFromRef"
      >
    </div>
    <div id="textFieldErrorId-:r0:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRequired play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1b:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1a:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:r1a:"
             class="_textbox_jd6ca_12"
             required
             value
      >
    </div>
    <div id="textFieldErrorId-:r19:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRequiredAndMark smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1e:"
           class="_label_348na_5 _label_required_348na_12"
           for="textFieldTextboxId-:r1d:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:r1d:"
             class="_textbox_jd6ca_12"
             required
             value
      >
    </div>
    <div id="textFieldErrorId-:r1c:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRows play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1n:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1m:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <textarea id="textFieldTextboxId-:r1m:"
                class="_textbox_jd6ca_12  _textbox_multiline_jd6ca_52"
                rows="4"
      >
      </textarea>
    </div>
    <div id="textFieldErrorId-:r1l:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithTextAreaAutoSizeInModal play-test 1`] = `
<div data-test-block="true">
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Vis modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:r2s:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_g87u5_1 _button_medium_g87u5_45  _closeButton_125nh_61"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2t:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2t:">
            Lukk dialogvindu
          </title>
          <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:r2s:"
            class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 _modalHeading_125nh_29"
        >
          Modal med textarea
        </h1>
        <div class>
          <label id="labelId-:r30:"
                 class="_label_348na_5"
                 for="textFieldTextboxId-:r2v:"
          >
            Navn
          </label>
          <div class="_inputWrapper_jd6ca_6">
            <textarea id="textFieldTextboxId-:r2v:"
                      class="_textbox_jd6ca_12  _textbox_multiline_jd6ca_52 _textbox_autosize_jd6ca_56"
                      style="height: 0px;"
            >
            </textarea>
          </div>
          <div id="textFieldErrorId-:r2u:"
               aria-live="assertive"
               aria-atomic="true"
          >
          </div>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/TextField WithThousandSeparator play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r27:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r26:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:r26:"
             class="_textbox_jd6ca_12"
             value
      >
    </div>
    <div id="textFieldErrorId-:r25:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithThousandSeparatorAndNegativeValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2a:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r29:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:r29:"
             class="_textbox_jd6ca_12"
             value
      >
    </div>
    <div id="textFieldErrorId-:r28:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rp:"
           class="_label_348na_5"
           for="textFieldTextboxId-:ro:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:ro:"
             class="_textbox_jd6ca_12"
             value="Kari Nordmann"
      >
    </div>
    <div id="textFieldErrorId-:rn:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithVariantLarge smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rg:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rf:"
    >
      Navn
    </label>
    <div class="_inputWrapper_jd6ca_6">
      <input id="textFieldTextboxId-:rf:"
             class="_textbox_jd6ca_12 _textbox_large_jd6ca_37"
             value
      >
    </div>
    <div id="textFieldErrorId-:re:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;
